kubernetes/apps/pihole/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-httproute
  namespace: pihole
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - pihole.${cluster_domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /admin
            statusCode: 302
    - matches:
        - path:
            type: PathPrefix
            value: "/admin"
      backendRefs:
        - name: pihole-web
          port: 80
          weight: 1
